--- a/platforms/android/project.properties
+++ b/platforms/android/project.properties
@@ -13,3 +13,4 @@
 target=android-23
 android.library.reference.1=CordovaLib
 cordova.gradle.include.1=cordova-plugin-crosswalk-webview/findaparty-xwalk.gradle
+cordova.system.library.1=com.google.android.gms:play-services-analytics:+
